bug squashing pt 2

--- a/css/visualize.css
+++ b/css/visualize.css
@@ -616,10 +616,14 @@ input::-webkit-inner-spin-button {
     width: 25%;
 }
 
-#scatterPlot{
+#scatterPlotHolder {
     width: 60%;
     margin-left: 7.5%;
     margin-right: 2.5%;
+}
+
+#scatterPlot{
+    width: 100%;
     border-left: 4px solid black;
     border-bottom: 4px solid black;
     position: relative;
@@ -648,14 +652,32 @@ input::-webkit-inner-spin-button {
     border-right: 1px dotted lightgray;
 }
 
+#scatterYAxisTitle {
+    width: 25%;
+    margin: 1% 0 1% -12.5%;
+    text-align: center;
+    font-size: 110%;
+    opacity: 0.8;
+    font-weight: bold;
+}
+
+#scatterXAxisTitle {
+    width: 100%;
+    margin: 5% 0 0 0;
+    text-align: right;
+    font-size: 110%;
+    opacity: 0.8;
+    font-weight: bold;
+}
+
 .yScatterDisplay{
     position: absolute;
     transform: translate(0%, -100%);
     font-size:100%;
     top: 0%;
-    right: 110%;
+    right: 100%;
+    text-align: right;
 }
-
 
 .xScatterDisplay{
     position: absolute;
@@ -668,11 +690,21 @@ input::-webkit-inner-spin-button {
 
 #spectrum{
     border: 1px solid black;
+    margin-top: 7%;
     height: 5vh;
     width: 80%;
     position: relative;
     padding: 0;
-    
+}
+
+#curveInfo {
+    margin-top: 7%;
+}
+
+#scatterPlotTitle {
+    text-align: center;
+    padding: 0;
+    margin: 2% 0 2% 0
 }
 
 #spectrumUpperBound, #spectrumLowerBound {
